<resources>
    <string name="app_name">MyPetRoad</string>
    <string name="home">홈</string>
    <string name="map">실시간 위치</string>
    <string name="analysis">활동량 분석</string>
    <string name="analysis_detail">상세 활동량</string>
    <string name="walking">산책</string>
    <string name="settings">내정보</string>
    <string name="id_hint"><font size="15">아이디: 영문으로 시작, 최소 4글자 </font></string>
    <string name="pw_hint"><font size="15">비밀번호: 최소 6글자 </font></string>
    <string name="name_hint"><font size="15">이름: </font></string>
    <string name="address_hint"><font size="15">주소: </font></string>
    <string name="phone_hint"><font size="15">전화번호: </font></string>
    <string name="age_hint"><font size="15">나이: </font></string>
    <string name="species_hint"><font size="15">견종: </font></string>
    <string name="weight_hint"><font size="15">몸무게: </font></string>
    <string name="map_search">도로명, 건물명 또는 지번으로 검색</string>
    <string name="daily_analysis">일간</string>
    <string name="weekly_analysis">주간</string>
    <string name="monthly_analysis">월간</string>
    <string name="entire_analysis">전체</string>
    <string name="analysis_time">산책 시간</string>
    <string name="entire_time">총 산책 시간</string>
    <string name="entire_number">총 산책 횟수</string>
    <string name="entire_distance">총 이동 거리</string>
    <string name="analysis_distance">거리</string>
    <string name="analysis_calories">칼로리</string>
    <string name="entire_calories">총 소모 칼로리</string>
    <string name="entire_walking_map">모든 산책로</string>
    <string name="entire_walking_log">모든 활동 기록</string>
    <string name="detail_pet">가장 가까운 산책 친구</string>
    <string name="detail_pet_stop">가장 가까운 펫 스탑</string>
    <string name="detail_pet_memo">산책로 기록</string>
    <string name="detail_walking_record">오늘의 산책</string>

    <string name="permission_rationale">Permission rationale</string>
    <string name="text_gps_on">GPS ON</string>
    <string name="text_network_on">Network ON</string>
    <string name="text_off">OFF</string>
    <string name="permission_for_imei">Permission for imei</string>
    <string name="permission_for_imei_active">Please Active Permission for imei</string>
    <string name="permission_for_locations">Permission for Location</string>
    <string name="permission_for_locations_active">Please Active Permission for Location</string>
    <string name="text_status">상태 :</string>
    <string name="text_time">시간 :</string>
    <string name="text_all_dist">거리 :</string>
    <string name="text_forse_send">설명</string>
    <string name="text_data_to_send">데이터 보내기</string>
    <string name="text_send_time">파견 시간 :</string>
    <string name="text_send_status">Send status :</string>
    <string name="text_stop">STOP</string>
    <string name="text_start">Start</string>
    <string name="title_activity_del_maps">Map</string>
    <string name="text_server">서버</string>
    <string name="text_local">장소</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_time_interval">GPS survey </string>
    <string name="setting_time_interval_fast">GPS Polling. (sec)</string>
    <string name="setting_distance_interval">거리 (м)</string>
    <string name="setting_server_send_time">출발 시간 (최소)</string>
    <string name="setting_server_send_distance">배송 거리 ()</string>
    <string name="setting_data_save_day">Keep data (days)</string>
    <string name="setting_auto_exit">Auto shutdown</string>
    <string name="text_need_permission_imei">IMEI rights need to be allowed</string>
    <string name="text_gps_wona_on">GPS positioning is off, do you want to turn it on?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">Ok</string>
    <string name="title_activity_map_gps_setting">MapGpsSettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
</resources>