<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.mju.capstone.mypetRoad.ui.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/fragment_map"
        android:name="com.mju.capstone.mypetRoad.ui.view.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.mju.capstone.mypetRoad.ui.view.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/fragment_analysis"
        android:name="com.mju.capstone.mypetRoad.ui.view.AnalysisFragment"
        android:label="@string/analysis" />
    <fragment
        android:id="@+id/fragment_walking"
        android:name="com.mju.capstone.mypetRoad.ui.view.WalkingFragment"
        android:label="@string/walking" />
</navigation>