<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/analysis_card_view"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="#61FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/middle_section"
                    android:layout_width="0dp"
                    android:layout_height="350dp"
                    android:background="@drawable/ic_launcher_foreground"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/bottom_section"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/analysis_card_map"
                        android:layout_width="500dp"
                        android:layout_height="500dp"
                        android:src="@drawable/sample_map_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bottom_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/middle_section"
                    app:layout_constraintBottom_toBottomOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/time_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="70dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/analysis_card_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="120"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/analysis_card_min" />

                        <TextView
                            android:id="@+id/analysis_card_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="min"
                            app:layout_constraintStart_toEndOf="@+id/analysis_card_time"
                            app:layout_constraintBottom_toBottomOf="@id/analysis_card_time"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/analysis_time"
                            android:textSize="10sp"
                            android:gravity="center"
                            android:textColor="@color/base"
                            app:layout_constraintTop_toBottomOf="@id/analysis_card_time"
                            app:layout_constraintStart_toStartOf="@id/analysis_card_time"
                            app:layout_constraintEnd_toEndOf="@id/analysis_card_min"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:id="@+id/middle_space"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toEndOf="@+id/time_frame"
                        app:layout_constraintEnd_toStartOf="@+id/distance_frame"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/time_frame" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/distance_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="70dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/time_frame"
                        app:layout_constraintEnd_toStartOf="@+id/calorie_frame">
                        <TextView
                            android:id="@+id/analysis_card_distance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="3.36"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/analysis_card_km" />

                        <TextView
                            android:id="@+id/analysis_card_km"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="km"
                            app:layout_constraintStart_toEndOf="@+id/analysis_card_distance"
                            app:layout_constraintBottom_toBottomOf="@id/analysis_card_distance"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/analysis_distance"
                            android:textSize="10sp"
                            android:gravity="center"
                            android:textColor="@color/base"
                            app:layout_constraintTop_toBottomOf="@id/analysis_card_distance"
                            app:layout_constraintStart_toStartOf="@id/analysis_card_distance"
                            app:layout_constraintEnd_toEndOf="@id/analysis_card_km"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:id="@+id/bottom_space"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toEndOf="@+id/distance_frame"
                        app:layout_constraintEnd_toStartOf="@id/calorie_frame"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/distance_frame" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/calorie_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginBottom="70dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/analysis_card_calories"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="140"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginEnd="2dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/analysis_card_kcal" />

                        <TextView
                            android:id="@+id/analysis_card_kcal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="kcal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="@id/analysis_card_calories"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/analysis_calories"
                            android:textSize="10sp"
                            android:gravity="center"
                            android:textColor="@color/base"
                            app:layout_constraintTop_toBottomOf="@id/analysis_card_calories"
                            app:layout_constraintStart_toStartOf="@id/analysis_card_calories"
                            app:layout_constraintEnd_toEndOf="@id/analysis_card_kcal"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</layout>